# NN-project

./: Activation.cpp  Activation.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  Function.h  Initializer.cpp  Initializer.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Optimizer.h  Result.cpp  Result.h  TEST.cpp  Vector.cpp  Vector.h
